<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmenttab.ProfileFragment">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progressbar"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar" />

    <include layout="@layout/alert_no_connection"
        android:id="@+id/layout_no_connection"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="?android:attr/colorBackground"
                android:elevation="2dp"
                android:gravity="center_vertical"
                android:id="@+id/header"
                android:orientation="horizontal">

                <!-- Width, Height and scaleType redefined dynamically -->
                <ImageView
                    android:layout_width="@dimen/profile_picture_size"
                    android:layout_height="@dimen/profile_picture_size"
                    android:id="@+id/picture"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerCrop" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/username" />

                    <LinearLayout
                        android:id="@+id/infobox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/collapsing_appbar_infobox_margin_vertical"
                        android:layout_marginBottom="@dimen/collapsing_appbar_infobox_margin_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/subscribers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:textSize="@dimen/grid_item_text_secondary_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/subscribers_label"
                            android:textSize="@dimen/grid_item_text_secondary_size" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:background="@color/primary_light"
                android:elevation="4dp"
                android:id="@+id/personal_info_edit"
                android:orientation="vertical"
                android:visibility="invisible"
                android:layout_below="@+id/header" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_name_edit"
                        android:hint="@string/hint_firstname"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/family_name_edit"
                        android:hint="@string/hint_surname"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/description_edit"
                        android:hint="@string/hint_description"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:id="@+id/cancel_edit"
                        android:textColor="@color/accent"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:id="@+id/submit_edit"
                        android:enabled="false"
                        style="@style/Widget.AppCompat.Button.Borderless" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:id="@+id/personal_info_pres"
                android:orientation="vertical"
                android:layout_alignEnd="@id/header"
                android:layout_below="@+id/header"
                android:layout_alignBottom="@+id/personal_info_edit" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/title_personal_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/hint_firstname" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance"
                    android:id="@+id/first_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/hint_surname" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance"
                    android:id="@+id/family_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/hint_email" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance"
                    android:id="@+id/email"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/hint_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance"
                    android:id="@+id/description"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_below="@+id/personal_info_pres">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/title_password" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_change_password"
                    android:id="@+id/change_password" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_action_edit_white"
        android:scaleType="center"
        app:layout_anchor="@id/header"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>

